--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "tsc",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "test": "jest --config jestconfig.json",
-    "prepare": "tsc"
+    "prepare": "tsc",
+    "doc": "typedoc src/index.ts --includeVersion --theme minimal"
   },
   "keywords": [
     "rpc",
@@ -26,6 +27,7 @@
     "jest": "^26.6.3",
     "ts-jest": "^26.5.4",
     "tslint": "^6.1.3",
+    "typedoc": "^0.20.35",
     "typescript": "^4.2.3"
   },
   "dependencies": {
